[gd_scene load_steps=6 format=3 uid="uid://46pgaf3kmqub"]

[ext_resource type="Texture2D" uid="uid://cst3biu6vt4re" path="res://IMG/лес в снегу.webp" id="1_q4ew6"]
[ext_resource type="Script" uid="uid://cg3wd7hh0kndt" path="res://play_btn.gd" id="2_40xib"]
[ext_resource type="FontFile" uid="uid://bqikkx1axc3ol" path="res://ДРУГОЕ/Zaychik/Zaychik-Regular.ttf" id="2_gs7x4"]
[ext_resource type="Script" uid="uid://cnu8n6p5ub6uk" path="res://SCENE/settings_btn.gd" id="3_40xib"]
[ext_resource type="Script" uid="uid://c4vcrg6fvi7dx" path="res://SCENE/quit_btn.gd" id="3_lquar"]

[node name="Node2D" type="Node2D"]

[node name="ЛесВСнегу" type="Sprite2D" parent="."]
position = Vector2(967.9999, 538.5)
scale = Vector2(4.0333333, 4.0333333)
texture = ExtResource("1_q4ew6")

[node name="PlayBtn" type="Button" parent="."]
clip_contents = true
offset_left = 741.0
offset_top = 621.0
offset_right = 1193.0
offset_bottom = 753.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 4
icon_alignment = 1
script = ExtResource("2_40xib")

[node name="Label" type="Label" parent="PlayBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/font = ExtResource("2_gs7x4")
theme_override_font_sizes/font_size = 110
text = "Играть"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitBtn" type="Button" parent="."]
offset_left = 806.0
offset_top = 921.0
offset_right = 1125.6709
offset_bottom = 1059.0
script = ExtResource("3_lquar")

[node name="Label" type="Label" parent="QuitBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/font = ExtResource("2_gs7x4")
theme_override_font_sizes/font_size = 96
text = "Выйти"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsBtn" type="Button" parent="."]
offset_left = 777.0
offset_top = 785.0
offset_right = 1167.0
offset_bottom = 904.0
script = ExtResource("3_40xib")

[node name="Label" type="Label" parent="SettingsBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/font = ExtResource("2_gs7x4")
theme_override_font_sizes/font_size = 96
text = "Настройки"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = 223.0
offset_top = 69.0
offset_right = 1788.0
offset_bottom = 339.0
theme_override_fonts/font = ExtResource("2_gs7x4")
theme_override_font_sizes/font_size = 145
text = "Сквозь Чужие Страхи "
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PlayBtn" to="PlayBtn" method="_on_pressed"]
[connection signal="pressed" from="QuitBtn" to="PlayBtn" method="_on_quit_btn_pressed"]
[connection signal="pressed" from="SettingsBtn" to="PlayBtn" method="_on_settings_btn_pressed"]
